# 8kEdu

./: .env.bak.1784430147  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  analyze.py  ingest.py  pyproject.toml  run.sh  serve.py
.claude/: launch.json
.pnpm-store/v11/: index.db-shm  index.db-wal
agent/: api.py  brain.py  curator.py  db.py  db_rest.py  kg.py  loop.py  paired.py  tools.py
app/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
app/src/: App.jsx  exporters.js  formula.js  formula.test.js  supa.js  widgets.jsx
claw-agent/: README.md  agent_egress_probe.py  contain_demo.sh  contained_agent_demo.sh
claw-agent/policies/: 8kedu.yaml
data/1HKrqlZmYwM/: chapters.json  concepts.json  frames.json  transcript.json
data/3FZipnSI_po/: concepts.json  frames.json  transcript.json
data/42L1q1Z4Ojc/: chapters.json  concepts.json  concepts.paired.p20260719a.cold.json  concepts.paired.p20260719a.warm.json  frames.json  paired.p20260719a.json  transcript.json
data/4Bdc55j80l8/: chapters.json  concepts.json  frames.json  transcript.json
data/7x8vIvwYzFg/: chapters.json  concepts.json  frames.json  (+1 more)
deploy/: ecosystem.config.js  k8s-kedu.yaml
docs/: DEPLOY_ON_SERVER.md  architecture-print.html  architecture.html  perf.html
scripts/: expand_recursive_demo.py  patch-vllm-nemotron-audio.py  preflight.sh  scrub_video.py  serve-vllm-metal.sh  serve-vllm.sh  vendor-pyodide.sh
spec/: spec.md
supabase/: config.toml
tests/: test_cloud_billing.py  test_kg.py  test_paired_experiment.py  test_valid_spreadsheet.py
(+115 files in other folders)
