[project]
name = "8kedu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "matplotlib>=3.11.0",
    "mlx-vlm>=0.6.4; sys_platform == 'darwin'",  # Apple-Silicon local vision only; skipped on Linux servers (use cloud/OpenRouter)
    "numpy>=2.5.1",
    "openai>=2.45.0",
    "pillow>=12.3.0",
    "psycopg2-binary>=2.9.9",
    "uvicorn>=0.51.0",
    "yt-dlp>=2026.7.4",
]
